--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,42 @@
     <title>Site de Chef</title>
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
+
 <body>
 
+    <header>
+        <nav
+            class="d-flex px-5 gap-1 p-1 flex-column flex-lg-row justify-content-between align-items-center text-center">
+            <!-- left Navlinks -->
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Team</a></li>
+            </ul>
+
+            <!-- Site Logo -->
+            <a href="./index.html">
+                <img class="d-none d-lg-flex" src="./public/img/logo.png" alt="">
+            </a>
+            <!-- Right NavLinks -->
+            <ul>
+                <li><a href="">Reservation</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Test</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="bg-img">
+
+        </div>
+    </main>
 
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
