--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
 
     <main>
         <div class="bg-img">
-
+            <div class="banner-content mt-5">
+                <h1 class="banner-text">Whatever your <span class="big-text">OCCASION,</span>
+                <br>
+                <span class="text-chef-red big-text">TASTE</span> makes it one <br>
+                to remember!</h1>
+                <div class="banner-btn mt-2">
+                    <button class="btn btn-light">
+                        Purchase Theme
+                    </button>
+                    <button class="btn btn-chef-red">
+                        Learn More
+                    </button>
+                </div>
+            </div>
         </div>
     </main>
 
