--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
     </header>
 
     <main>
+        <!-- Salad background image -->
         <div class="bg-img">
+            <!-- Text and buttons -->
             <div class="banner-content mt-5">
                 <h1 class="banner-text">Whatever your <span class="big-text">OCCASION,</span>
-                <br>
-                <span class="text-chef-red big-text">TASTE</span> makes it one <br>
-                to remember!</h1>
+                    <br>
+                    <span class="text-chef-red big-text">TASTE</span> makes it one <br>
+                    to remember!
+                </h1>
                 <div class="banner-btn mt-2">
                     <button class="btn btn-light">
                         Purchase Theme
@@ -53,6 +56,40 @@
                 </div>
             </div>
         </div>
+
+        <!-- See you in 24hours -->
+
+
+        <!-- Meet the Chefs -->
+
+        <div class="chefs d-flex gap-2 flex-column justify-content-between align-items-center p-2">
+            <!-- Meet Text -->
+            <div class="chefs-text text-center text-light">
+                <h1><span class="text-chef-red">MEET</span> Our Chefs</h1>
+                <img src="./public/img/decoration_line.png" width="100%" alt="">
+            </div>
+
+            <!-- Chefs profiles -->
+            <div class="chefs-images d-flex flex-column flex-md-row justify-content-evenly align-items-center">
+                <div class="chef text-center">
+                    <img src="./public/img/chef1.png" width="70%" alt="">
+                    <p class="text-light">Lorem Ipsum</p>
+                </div>
+                <div class="chef text-center">
+                    <img src="./public/img/chef2.png" width="70%" alt="">
+                    <p class="text-light">Lorem Ipsum</p>
+                </div>
+                <div class="chef text-center">
+                    <img src="./public/img/chef3.png" width="70%" alt="">
+                    <p class="text-light">Lorem Ipsum</p>
+                </div>
+                <div class="chef text-center">
+                    <img src="./public/img/chef4.png" width="70%" alt="">
+                    <p class="text-light">Lorem Ipsum</p>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
