--- a/index.html
+++ b/index.html
@@ -57,8 +57,28 @@
             </div>
         </div>
 
-        <!-- See you in 24hours -->
+        <!-- bottom decoration -->
+        <!-- <div class="bottom-deco">
 
+        </div> -->
+        <!-- See you in 24hours -->
+        <div class="menu p-1">
+            <div class="menu-paper container bg-light">
+                <img src="./public/img/box-left-top.png" class="float-start" alt="">
+                <img src="./public/img/box-right-top.png" class="float-end" alt="">
+                <div class="text-center d-flex flex-column justify-content-center">
+                    <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
+                    <img src="./public/img/decoration_line.png" alt="">
+                    <p class="d-none mt-2 d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem explicabo ipsam, modi
+                        corporis quam sapiente dicta labore at voluptatem, enim, dolore nemo. Magnam sequi excepturi
+                        cumque quos autem reprehenderit dolore.
+                        Est rem, voluptate nemo quasi possimus animi id harum ipsam similique aspernatur? Officia quis
+                        quaerat ipsam, perspiciatis repellendus accusamus nihil sint magni eveniet, temporibus nesciunt
+                        deleniti ratione adipisci at veniam.</p>
+                </div>
+
+            </div>
+        </div>
 
         <!-- Meet the Chefs -->
 
