--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <header>
+        <!--? Nav Bar  -->
         <nav
             class="d-flex px-5 gap-1 p-1 flex-column flex-lg-row justify-content-between align-items-center text-center">
             <!-- left Navlinks -->
@@ -37,7 +38,7 @@
     </header>
 
     <main>
-        <!-- Salad background image -->
+        <!--? Salad background image -->
         <div class="bg-img">
             <!-- Text and buttons -->
             <div class="banner-content mt-5">
@@ -61,26 +62,34 @@
         <!-- <div class="bottom-deco">
 
         </div> -->
-        <!-- See you in 24hours -->
+        <!--? See you in 24hours -->
         <div class="menu p-1">
-            <div class="menu-paper container bg-light">
+            <div class="menu-paper p-0 container bg-light">
+                <!-- Top Coreners -->
                 <img src="./public/img/box-left-top.png" class="float-start" alt="">
                 <img src="./public/img/box-right-top.png" class="float-end" alt="">
-                <div class="text-center d-flex flex-column justify-content-center">
+                <!-- Story -->
+                <div class="text-center d-flex flex-column justify-content-center m-0">
                     <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
                     <img src="./public/img/decoration_line.png" alt="">
-                    <p class="d-none mt-2 d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem explicabo ipsam, modi
+                    <p class="d-none mt-2 d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Exercitationem explicabo ipsam, modi
                         corporis quam sapiente dicta labore at voluptatem, enim, dolore nemo. Magnam sequi excepturi
                         cumque quos autem reprehenderit dolore.
                         Est rem, voluptate nemo quasi possimus animi id harum ipsam similique aspernatur? Officia quis
-                        quaerat ipsam, perspiciatis repellendus accusamus nihil sint magni eveniet, temporibus nesciunt
-                        deleniti ratione adipisci at veniam.</p>
+                        quaerat ipsam.</p>
                 </div>
 
+                <!-- 24hours thingy -->
+
+
+                <!-- Bottom Corners -->
+                <img src="./public//img/box-bottom-left.png" class="float-start" alt="">
+                <img src="./public/img/box-bottom_right.png" class="float-end" alt="">
             </div>
         </div>
 
-        <!-- Meet the Chefs -->
+        <!--? Meet the Chefs -->
 
         <div class="chefs d-flex gap-2 flex-column justify-content-between align-items-center p-2">
             <!-- Meet Text -->
@@ -110,6 +119,96 @@
             </div>
         </div>
 
+
+
+        <!--? Reservation -->
+        <div class="menu p-1">
+            <div class="menu-paper container bg-light p-0">
+                <!-- Top Coreners -->
+                <img src="./public/img/box-left-top-grey.png" class="float-start" alt="">
+                <img src="./public/img/box-right-top-grey.png" class="float-end" alt="">
+
+                <!-- Book -->
+                <div class="text-center d-flex flex-column align-items-center m-0">
+                    <h1 class=" mt-2"><span class="text-chef-red">BOOK</span> Your Table</h1>
+                    <img src="./public/img/decoration_line.png" width="50%" alt="">
+                </div>
+
+                <!-- Form -->
+                <div class="container w-75 mt-3 rounded form-bg-img p-2 d-flex flex-column align-items-center">
+                    <p class="text-white">For any query please call us at: <b>+91-1234567890</b></p>
+
+                    <div class="d-flex">
+                        <form action="" class="mb-2 mt-2">
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" placeholder="Name" class="mt-1 rounded-pill border-0">
+                                </div>
+                                <div class="col">
+                                    <input type="text" placeholder="Name" class="mt-1 rounded-pill border-0">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" placeholder="Name" class="mt-1 rounded-pill border-0">
+                                </div>
+                                <div class="col">
+                                    <select class="form-select form-select-lg  mt-1 rounded-pill border-0"
+                                        aria-label="Default select example">
+                                        <option selected>select menu</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" placeholder="Name" class="mt-1 rounded-pill border-0">
+                                </div>
+                                <div class="col">
+                                    <input type="text" placeholder="Name" class="mt-1 rounded-pill border-0">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <select class="form-select form-select-lg  mt-1 rounded-pill border-0"
+                                        aria-label="Default select example">
+                                        <option selected>select menu</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <select class="form-select form-select-lg  mt-1 rounded-pill border-0"
+                                        aria-label="Default select example">
+                                        <option selected>select menu</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+
+                    <button class="btn btn-chef-red rounded-pill px-1">
+                        BOOK NOW
+                    </button>
+                </div>
+
+                <!-- Blog Title -->
+                <div class="text-center d-flex flex-column align-items-center m-0">
+                    <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Blog</h1>
+                    <img src="./public/img/decoration_line.png" width="50%" alt="">
+                </div>
+                <!-- Bottom Corners -->
+                <img src="./public//img/box-bottom-left-grey.png" class="float-start" alt="">
+                <img src="./public/img/box-bottom_right-grey.png" class="float-end" alt="">
+            </div>
+        </div>
     </main>
 
 
