--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
                                     <input type="text" placeholder="Name" class="mt-1 rounded-pill border-0">
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row d-flex flex-column flex-md-row">
                                 <div class="col">
-                                    <select class="form-select form-select-lg  mt-1 rounded-pill border-0"
-                                        aria-label="Default select example">
+                                    <select class="form-select form-select-lg  mt-1 rounded-pill border-0">
                                         <option selected>select menu</option>
                                         <option value="1">One</option>
                                         <option value="2">Two</option>
@@ -181,8 +180,7 @@
                                     </select>
                                 </div>
                                 <div class="col">
-                                    <select class="form-select form-select-lg  mt-1 rounded-pill border-0"
-                                        aria-label="Default select example">
+                                    <select class="form-select form-select-lg  mt-1 rounded-pill border-0">
                                         <option selected>select menu</option>
                                         <option value="1">One</option>
                                         <option value="2">Two</option>
@@ -200,13 +198,55 @@
                 </div>
 
                 <!-- Blog Title -->
-                <div class="text-center d-flex flex-column align-items-center m-0">
+                <div class="text-center d-flex flex-column align-items-center mt-2">
                     <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Blog</h1>
                     <img src="./public/img/decoration_line.png" width="50%" alt="">
+                </div>
+
+
+
+                <!-- Blog Cards -->
+
+                <div
+                    class="container-fluid container-md w-75 mt-2 d-flex flex-column flex-md-row align-items-center gap-2">
+                    <!-- Left card -->
+                    <div class="card border-0">
+                        <img src="./public/img/blog_img1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body position-relative">
+                            <p class="text-center card-comment position-absolute start-50 translate-middle">
+                                Lorem ipsum dolor sit amet.
+                            </p>
+                            <br> <br>
+                            <h5 class="card-title fw-bold">Lorem, ipsum.</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+
+                    <!-- Right card -->
+                    <div class="card border-0">
+                        <img src="./public/img/blog_img2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body position-relative">
+                            <div class="text-center card-comment position-absolute start-50 translate-middle">
+                                Lorem ipsum dolor sit amet.
+                            </div>
+                            <br> <br>
+                            <h5 class="card-title fw-bold">Lorem, ipsum.</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Blog button -->
+                <div class="d-flex justify-content-center align-items-center mt-2">
+                    <button class="btn btn-chef-red px-1 rounded-pill">Know More</button>
                 </div>
                 <!-- Bottom Corners -->
                 <img src="./public//img/box-bottom-left-grey.png" class="float-start" alt="">
                 <img src="./public/img/box-bottom_right-grey.png" class="float-end" alt="">
+            
             </div>
         </div>
     </main>
