--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div> -->
         <!--? See you in 24hours -->
         <div class="menu p-1">
-            <div class="menu-paper p-0 container bg-light">
+            <div class="menu-paper p-0 container">
                 <!-- Top Coreners -->
                 <img src="./public/img/box-left-top.png" class="float-start" alt="">
                 <img src="./public/img/box-right-top.png" class="float-end" alt="">
@@ -79,19 +79,20 @@
                         Est rem, voluptate nemo quasi possimus animi id harum ipsam similique aspernatur? Officia quis
                         quaerat ipsam.</p>
                 </div>
-
+                <div class="d-flex justify-content-between align-items-center mt-2">
+                    <img src="./public//img/box-bottom-left.png" class="float-start" alt="">
+                    <img src="./public/img/box-bottom_right.png" class="float-end" alt="">
+                </div>
                 <!-- 24hours thingy -->
 
 
                 <!-- Bottom Corners -->
-                <img src="./public//img/box-bottom-left.png" class="float-start" alt="">
-                <img src="./public/img/box-bottom_right.png" class="float-end" alt="">
             </div>
         </div>
 
         <!--? Meet the Chefs -->
 
-        <div class="chefs d-flex gap-2 flex-column justify-content-between align-items-center p-2">
+        <div class="chefs container-fluid d-flex gap-2 flex-column justify-content-between align-items-center p-2">
             <!-- Meet Text -->
             <div class="chefs-text text-center text-light">
                 <h1><span class="text-chef-red">MEET</span> Our Chefs</h1>
@@ -122,8 +123,8 @@
 
 
         <!--? Reservation -->
-        <div class="menu p-1">
-            <div class="menu-paper container bg-light p-0">
+        <div class="menu p-1 mt-3">
+            <div class="menu-paper container p-0">
                 <!-- Top Coreners -->
                 <img src="./public/img/box-left-top-grey.png" class="float-start" alt="">
                 <img src="./public/img/box-right-top-grey.png" class="float-end" alt="">
@@ -240,13 +241,13 @@
 
 
                 <!-- Blog button -->
-                <div class="d-flex justify-content-center align-items-center mt-2">
+                <div class="d-flex justify-content-between align-items-center mt-2">
+                    <img src="./public//img/box-bottom-left-grey.png" class="float-start" alt="">
                     <button class="btn btn-chef-red px-1 rounded-pill">Know More</button>
+                    <img src="./public/img/box-bottom_right-grey.png" class="float-end" alt="">
                 </div>
                 <!-- Bottom Corners -->
-                <img src="./public//img/box-bottom-left-grey.png" class="float-start" alt="">
-                <img src="./public/img/box-bottom_right-grey.png" class="float-end" alt="">
-            
+
             </div>
         </div>
     </main>
