--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                         Est rem, voluptate nemo quasi possimus animi id harum ipsam similique aspernatur? Officia quis
                         quaerat ipsam.</p>
                 </div>
-                <div class="d-flex justify-content-between align-items-center mt-2">
-                    <img src="./public//img/box-bottom-left.png" class="float-start" alt="">
-                    <img src="./public/img/box-bottom_right.png" class="float-end" alt="">
-                </div>
                 <!-- 24hours thingy -->
 
 
                 <!-- Bottom Corners -->
+                <div class="d-flex justify-content-between align-items-center mt-2">
+                    <img src="./public//img/box-bottom-left.png" class="float-start" alt="">
+                    <img src="./public/img/box-bottom_right.png" class="float-end" alt="">
+                </div>
             </div>
         </div>
 
@@ -207,7 +207,6 @@
 
 
                 <!-- Blog Cards -->
-
                 <div
                     class="container-fluid container-md w-75 mt-2 d-flex flex-column flex-md-row align-items-center gap-2">
                     <!-- Left card -->
@@ -241,13 +240,42 @@
 
 
                 <!-- Blog button -->
+                <!-- Bottom Corners -->
                 <div class="d-flex justify-content-between align-items-center mt-2">
                     <img src="./public//img/box-bottom-left-grey.png" class="float-start" alt="">
                     <button class="btn btn-chef-red px-1 rounded-pill">Know More</button>
                     <img src="./public/img/box-bottom_right-grey.png" class="float-end" alt="">
                 </div>
-                <!-- Bottom Corners -->
+            </div>
+        </div>
 
+
+
+        <div class="testimonials">
+            <!-- Testimonials Title -->
+            <div class="text-center d-flex flex-column align-items-center m-0 text-white">
+                <h1 class=" mt-2"><span class="text-chef-red">CLIENT</span> Testimonials</h1>
+                <img src="./public/img/decoration_line.png" width="50%" alt="">
+            </div>
+
+            <!-- Client reviews -->
+            <div class="reviews d-flex gap-2 flex-column flex-lg-row justify-content-between p-3 align-items-center">
+                <div class="first-review d-flex flex-column flex-md-row gap-3 align-items-center">
+                    <img src="./public/img/testimonial1.jpg" height="150px" width="150px" class="border border-5 border-secondary rounded-circle" alt="">
+                    <div class="border border-2 border-secondary rounded text-white p-1">
+                        <p><b>Lorem ipsum dolor</b></p>
+                        <p class="text-chef-red">Manager</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eos numquam rem eius at.</p>
+                    </div>
+                </div>
+                <div class="second-review d-flex flex-column-reverse flex-md-row gap-3 align-items-center">
+                    <div class="border border-2 border-secondary rounded text-white p-1">
+                        <p><b>Lorem ipsum dolor</b></p>
+                        <p class="text-chef-red">Manager</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eos numquam rem eius at.</p>
+                    </div>
+                    <img src="./public/img/testimonial1.jpg" height="150px" width="150px" class="border border-5 border-secondary rounded-circle" alt="">
+                </div>
             </div>
         </div>
     </main>
@@ -256,4 +284,4 @@
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
-</html>
+</html> 
