--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 
 
 
+        <!--? Client Testimonials -->
         <div class="testimonials">
             <!-- Testimonials Title -->
             <div class="text-center d-flex flex-column align-items-center m-0 text-white">
@@ -260,22 +261,52 @@
 
             <!-- Client reviews -->
             <div class="reviews d-flex gap-2 flex-column flex-lg-row justify-content-between p-3 align-items-center">
-                <div class="first-review d-flex flex-column flex-md-row gap-3 align-items-center">
-                    <img src="./public/img/testimonial1.jpg" height="150px" width="150px" class="border border-5 border-secondary rounded-circle" alt="">
+                <div class="d-flex flex-column flex-md-row gap-3 align-items-center">
+                    <img src="./public/img/testimonial1.jpg" height="150px" width="150px"
+                        class="border border-5 border-secondary rounded-circle" alt="">
                     <div class="border border-2 border-secondary rounded text-white p-1">
                         <p><b>Lorem ipsum dolor</b></p>
                         <p class="text-chef-red">Manager</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eos numquam rem eius at.</p>
                     </div>
                 </div>
-                <div class="second-review d-flex flex-column-reverse flex-md-row gap-3 align-items-center">
+                <div class="d-flex flex-column-reverse flex-md-row gap-3 align-items-center">
                     <div class="border border-2 border-secondary rounded text-white p-1">
                         <p><b>Lorem ipsum dolor</b></p>
                         <p class="text-chef-red">Manager</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eos numquam rem eius at.</p>
                     </div>
-                    <img src="./public/img/testimonial1.jpg" height="150px" width="150px" class="border border-5 border-secondary rounded-circle" alt="">
+                    <img src="./public/img/testimonial1.jpg" height="150px" width="150px"
+                        class="border border-5 border-secondary rounded-circle" alt="">
                 </div>
+            </div>
+        </div>
+
+
+        <!--? Contact information -->
+        <div class="contact p-1">
+            <!-- Contact Title -->
+            <div class="title text-center d-flex flex-column align-items-center m-0">
+                <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Contact</h1>
+                <img src="./public/img/decoration_line.png" width="50%" alt="">
+            </div>
+
+            <!-- Contact info -->
+            <div
+                class="contact-info text-white text-center container-lg p-2 bg-chef-red rounded h-auto d-flex g-2 flex-column align-items-center">
+                <i class="fa-solid fa-location-dot fa-xl"></i>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, similique!</p>
+                <p>______________________________________________</p>
+                <br>
+                <i class="fa-solid fa-phone fa-2xl"></i>
+                <br>
+                <b>+91-1234567890</b>
+                <p>______________________________________________</p>
+                <br>
+                <i class="fa-solid fa-envelope fa-2xl"></i>
+                <br>
+                <p>abc@abc</p>
             </div>
         </div>
     </main>
@@ -284,4 +315,4 @@
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
-</html> 
+</html>
