--- a/index.html
+++ b/index.html
@@ -312,6 +312,71 @@
     </main>
 
 
+    <!--! Footer  -->
+    <footer
+        class="d-flex gap-1 text-center text-lg-start flex-column flex-lg-row justify-content-between align-items-center text-white p-2">
+        <!-- About us -->
+        <div class="about">
+            <h3>About us</h3>
+            <p>Lorem ipsum dolor sit amet consectetur,
+                <br> adipisicing elit. Molestias fugiat
+                <br> sed atque velit ab, hic
+                aperiam obcaecati excepturi
+                <br> repellendus delectus!
+            </p>
+            <div class="icons d-flex align-items-center justify-content-center gap-2 fs-3">
+                <!-- TODO: add links to SM -->
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-google-plus-g"></i>
+                <i class="fa-brands fa-pinterest-p"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+            </div>
+        </div>
+
+        <!-- Instagram -->
+        <div class="insta">
+            <h3>INSTAGRAM</h3>
+            <div class="d-flex d-md-block gap-2">
+                <!-- four icons -->
+                <div class="d-flex flex-column flex-md-row gap-1">
+                    <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                    <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                    <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                    <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                </div>
+                <br>
+                <!-- four icons -->
+                <div class="d-flex flex-column flex-md-row gap-1">
+                    <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                    <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                    <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                    <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+        <!-- Tags -->
+        <div class="tags d-flex flex-column">
+            <h3>Popular tags</h3>
+            <br> <br>
+            <div class="tags-text d-flex">
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Restaurant</button>
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Responsive</button>
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Hotel</button>
+            </div>
+            <div class="tags-text d-flex">
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Blog</button>
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">SEO</button>
+            </div>
+            <div class="tags-text d-flex">
+
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Cuisine</button>
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Graphic</button>
+                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Food</button>
+            </div>
+        </div>
+    </footer>
+
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
