--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
                 <img src="./public/img/box-left-top.png" class="float-start" alt="">
                 <img src="./public/img/box-right-top.png" class="float-end" alt="">
                 <!-- Story -->
-                <div class="text-center d-flex flex-column justify-content-center m-0">
-                    <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
-                    <img src="./public/img/decoration_line.png" alt="">
-                    <p class="d-none mt-2 d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                <div class="container text-center d-flex flex-column justify-content-center m-0">
+                    <div class="text-center d-flex flex-column align-items-center mt-2">
+                        <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
+                        <img src="./public/img/decoration_line.png" width="50%" alt="">
+                    </div>
+                    <p class="mt-2 w-100 d-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Exercitationem explicabo ipsam, modi
                         corporis quam sapiente dicta labore at voluptatem, enim, dolore nemo. Magnam sequi excepturi
                         cumque quos autem reprehenderit dolore.
@@ -312,11 +314,8 @@
     </main>
 
 
-    <!--! Footer  -->
-    <footer
-        class="d-flex gap-1 text-center text-lg-start flex-column flex-lg-row justify-content-between align-items-center text-white p-2">
-        <!-- About us -->
-        <div class="about">
+    <footer class="text-light container-fluid row p-2 text-center text-lg-start">
+        <div class="col mt-1">
             <h3>About us</h3>
             <p>Lorem ipsum dolor sit amet consectetur,
                 <br> adipisicing elit. Molestias fugiat
@@ -324,17 +323,24 @@
                 aperiam obcaecati excepturi
                 <br> repellendus delectus!
             </p>
-            <div class="icons d-flex align-items-center justify-content-center gap-2 fs-3">
-                <!-- TODO: add links to SM -->
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-google-plus-g"></i>
-                <i class="fa-brands fa-pinterest-p"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
+            <div class="fs-3 d-flex gap-1 justify-content-center">
+                <a href="https://www.facebook.com/" target="_blank" class="text-white">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a href="https://myaccount.google.com/" target="_blank" class="text-white">
+                    <i class="fa-brands fa-google-plus-g"></i>
+                </a>
+                <a href="https://www.pinterest.com/" target="_blank" class="text-white">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank" class="text-white">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
             </div>
-        </div>
 
-        <!-- Instagram -->
-        <div class="insta">
+        </div>
+        <div class="col mt-1">
+            <!-- Instagram -->
             <h3>INSTAGRAM</h3>
             <div class="d-flex d-md-block gap-2">
                 <!-- four icons -->
@@ -353,29 +359,28 @@
                     <img src="./public/img/instragram_gallery_img1.jpg" alt="">
                 </div>
             </div>
-        </div>
 
-        <!-- Tags -->
-        <div class="tags d-flex flex-column">
+        </div>
+        <div class="col mt-1">
+            <!-- Tags -->
             <h3>Popular tags</h3>
-            <br> <br>
-            <div class="tags-text d-flex">
+            <div class="tags-text d-md-flex">
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Restaurant</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Responsive</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Hotel</button>
             </div>
-            <div class="tags-text d-flex">
+            <div class="tags-text d-md-flex">
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Blog</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">SEO</button>
-            </div>
-            <div class="tags-text d-flex">
-
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Cuisine</button>
-                <button class="btn btn-chef-red border border-1 border-light rounded-pill">Graphic</button>
+            </div>
+            <div class="tags-text d-md-flex">
+                <button class=" btn btn-chef-red border border-1 border-light rounded-pill">Graphic</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Food</button>
             </div>
         </div>
     </footer>
+    <div class="last container-fluid"></div>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
