added bottom & top decoration lines

--- a/index.html
+++ b/index.html
@@ -59,29 +59,28 @@
         </div>
 
         <!-- bottom decoration -->
-        <!-- <div class="bottom-deco">
+        <div class="bottom-deco"></div>
 
-        </div> -->
-        <!--? See you in 24hours -->
+        <!--? Tab List -->
         <div class="menu p-1">
             <div class="menu-paper p-0 container">
                 <!-- Top Coreners -->
                 <img src="./public/img/box-left-top.png" class="float-start" alt="">
                 <img src="./public/img/box-right-top.png" class="float-end" alt="">
                 <!-- Story -->
+                <div class="text-center d-flex flex-column align-items-center mt-2">
+                    <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
+                    <img src="./public/img/decoration_line.png" width="50%" alt="">
+                </div>
                 <div class="container text-center d-flex flex-column justify-content-center m-0">
-                    <div class="text-center d-flex flex-column align-items-center mt-2">
-                        <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
-                        <img src="./public/img/decoration_line.png" width="50%" alt="">
-                    </div>
-                    <p class="mt-2 w-100 d-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Exercitationem explicabo ipsam, modi
                         corporis quam sapiente dicta labore at voluptatem, enim, dolore nemo. Magnam sequi excepturi
                         cumque quos autem reprehenderit dolore.
                         Est rem, voluptate nemo quasi possimus animi id harum ipsam similique aspernatur? Officia quis
                         quaerat ipsam.</p>
                 </div>
-                <!-- 24hours thingy -->
+                <!-- Tab list -->
 
 
                 <!-- Bottom Corners -->
@@ -139,7 +138,7 @@
 
                 <!-- Form -->
                 <div class="container w-75 mt-3 rounded form-bg-img p-2 d-flex flex-column align-items-center">
-                    <p class="text-white">For any query please call us at: <b>+91-1234567890</b></p>
+                    <p class="text-whixte">For any query please call us at: <b>+91-1234567890</b></p>
 
                     <div class="d-flex">
                         <form action="" class="mb-2 mt-2">
@@ -292,7 +291,7 @@
                 <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Contact</h1>
                 <img src="./public/img/decoration_line.png" width="50%" alt="">
             </div>
-
+            <br>
             <!-- Contact info -->
             <div
                 class="contact-info text-white text-center container-lg p-2 bg-chef-red rounded h-auto d-flex g-2 flex-column align-items-center">
@@ -314,6 +313,13 @@
     </main>
 
 
+
+    <!--! Footer  -->
+    <!-- footer decoration -->
+    <div class="position-relative">
+        <div class="footer-deco"></div>
+    </div>
+    <!-- footer -->
     <footer class="text-light container-fluid row p-2 text-center text-lg-start">
         <div class="col mt-1">
             <h3>About us</h3>
@@ -361,20 +367,20 @@
             </div>
 
         </div>
-        <div class="col mt-1">
+        <div class="col mt-1 ">
             <!-- Tags -->
             <h3>Popular tags</h3>
-            <div class="tags-text d-md-flex">
+            <div class="tags-text d-md-flex ms-md-9 m-lg-0">
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Restaurant</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Responsive</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Hotel</button>
             </div>
-            <div class="tags-text d-md-flex">
+            <div class="tags-text d-md-flex ms-md-11 m-lg-0">
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Blog</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">SEO</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Cuisine</button>
             </div>
-            <div class="tags-text d-md-flex">
+            <div class="tags-text d-md-flex ms-md-12 m-lg-0">
                 <button class=" btn btn-chef-red border border-1 border-light rounded-pill">Graphic</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Food</button>
             </div>
