--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
 <body>
 
+    <!--! Header -->
     <header>
         <!--? Nav Bar  -->
         <nav
-            class="d-flex px-5 gap-1 p-1 flex-column flex-lg-row justify-content-between align-items-center text-center">
+            class="d-flex px-5 gap-1 p-1 flex-column flex-lg-row justify-content-evenly align-items-center text-center">
             <!-- left Navlinks -->
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Menu</a></li>
-                <li><a href="">Team</a></li>
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">MENU</a></li>
+                <li><a href="">TEAM</a></li>
             </ul>
 
             <!-- Site Logo -->
@@ -29,10 +30,10 @@
             </a>
             <!-- Right NavLinks -->
             <ul>
-                <li><a href="">Reservation</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Test</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="">RESERVE</a></li>
+                <li><a href="">BLOG</a></li>
+                <li><a href="">TEST</a></li>
+                <li><a href="">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -72,6 +73,7 @@
                     <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
                     <img src="./public/img/decoration_line.png" width="50%" alt="">
                 </div>
+                
                 <div class="container text-center d-flex flex-column justify-content-center m-0">
                     <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Exercitationem explicabo ipsam, modi
@@ -766,7 +768,7 @@
                         <img src="./public/img/blog_img1.jpg" class="card-img-top" alt="...">
                         <div class="card-body position-relative">
                             <p class="text-center card-comment position-absolute start-50 translate-middle">
-                                Lorem ipsum dolor sit amet.
+                                Lorem ipsum dolor sit.
                             </p>
                             <br> <br>
                             <h5 class="card-title fw-bold">Lorem, ipsum.</h5>
@@ -780,7 +782,7 @@
                         <img src="./public/img/blog_img2.jpg" class="card-img-top" alt="...">
                         <div class="card-body position-relative">
                             <div class="text-center card-comment position-absolute start-50 translate-middle">
-                                Lorem ipsum dolor sit amet.
+                                Lorem ipsum dolor sit.
                             </div>
                             <br> <br>
                             <h5 class="card-title fw-bold">Lorem, ipsum.</h5>
@@ -849,12 +851,12 @@
                 <i class="fa-solid fa-location-dot fa-xl"></i>
                 <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, similique!</p>
-                <p>______________________________________________</p>
+                <p>__________________________________</p>
                 <br>
                 <i class="fa-solid fa-phone fa-2xl"></i>
                 <br>
                 <b>+91-1234567890</b>
-                <p>______________________________________________</p>
+                <p>__________________________________</p>
                 <br>
                 <i class="fa-solid fa-envelope fa-2xl"></i>
                 <br>
@@ -899,7 +901,7 @@
         <div class="col mt-1">
             <!-- Instagram -->
             <h3>INSTAGRAM</h3>
-            <div class="d-flex d-md-block gap-2">
+            <div class="d-flex justify-content-evenly d-md-block gap-2">
                 <!-- four icons -->
                 <div class="d-flex flex-column flex-md-row gap-1">
                     <img src="./public/img/instragram_gallery_img1.jpg" alt="">
@@ -918,20 +920,20 @@
             </div>
 
         </div>
-        <div class="col mt-1 ">
+        <div class="col d-md-flex flex-md-column align-items-md-center d-lg-block mt-1 ">
             <!-- Tags -->
             <h3>Popular tags</h3>
-            <div class="tags-text d-md-flex ms-md-9 m-lg-0">
+            <div class="tags-text d-md-flex">
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Restaurant</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Responsive</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Hotel</button>
             </div>
-            <div class="tags-text d-md-flex ms-md-11 m-lg-0">
+            <div class="tags-text d-md-flex ">
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Blog</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">SEO</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Cuisine</button>
             </div>
-            <div class="tags-text d-md-flex ms-md-12 m-lg-0">
+            <div class="tags-text d-md-flex ">
                 <button class=" btn btn-chef-red border border-1 border-light rounded-pill">Graphic</button>
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Food</button>
             </div>
