--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h1 class=" mt-2"><span class="text-chef-red">OUR</span> Story</h1>
                     <img src="./public/img/decoration_line.png" width="50%" alt="">
                 </div>
-                
+
                 <div class="container text-center d-flex flex-column justify-content-center m-0">
                     <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Exercitationem explicabo ipsam, modi
@@ -89,7 +89,7 @@
                     <img src="./public/img/decoration_line.png" width="50%" alt="">
                 </div>
                 <br>
-                <div class="row">
+                <div class="row tab-section">
                     <div class="col-4">
                         <div class="list-group" id="list-tab" role="tablist">
                             <a class="p-1 list-group-item list-group-item-action active fs-3 fw-bold d-flex flex-column align-items-center gap-1"
